added 2 final questions to coder form

--- a/coder_form.html
+++ b/coder_form.html
@@ -15,7 +15,7 @@
     <div class="jumbotron text-center">
         <div class="container">
             <h1>Apply now to join our network of talented developers</h1>
-            <p>Please answer the following questions so we can find the perfect company for you!
+            <p class="lead"> Please answer the following questions so we can find the perfect company for you!
             </p>
         </div>
     </div><!--/jumbotron-->
@@ -256,7 +256,17 @@
         </div><!--/form-group-->
     </div><!--/container-->
 
-<!--Question 10 Tell us why someone would want to work for you -->
+<!--Q12 Tell us more about yourself-->
+    <div class="container">
+        <div class="form-group w-75">
+            <label>Tell us more about yourself</label>
+            <label class="ml-2"><small>(Interests, hobbies, special skills, ...)</small></label>
+                
+            <textarea class="form-control" id="" cols="30" rows="10" placeholder=""></textarea>
+        </div>
+    </div>
+
+<!--Question 13 Tell us why someone would want to work for you -->
     <div class="container">
         <div class="form-group w-75">
             <label>Tell us why companies would want to hire you </label>
@@ -265,6 +275,18 @@
             <textarea class="form-control" id="" cols="30" rows="10" placeholder="Be creative!"></textarea>
         </div>
     </div>
+
+<!--Q14 Last question: what do you expect from your future employer?-->
+    <div class="container">
+        <div class="form-group w-75">
+            <label>What do you expect from your future employer?</label>
+            
+            <textarea class="form-control" id="" cols="30" rows="10" placeholder=""></textarea>
+        </div>
+    </div>
+
+
+
       <!--Submit button-->
       <div class="container">
         <button type="submit" class="btn btn-dark justify-content-center">Submit</button>
