--- a/company_form.html
+++ b/company_form.html
@@ -13,7 +13,7 @@
   <body>
     <div class="jumbotron text-center">
       <div class="container">
-        <h1 class="page-header">Join our network to start working with talented developers.</h1>
+        <h1 class="page-header">Join our network to start working with talented developers</h1>
         <p class="lead">Please answer the following questions so we can find the perfect match for your company!</p>
       </div>
     </div>
