--- a/coder-profile/profile-full-coder.html
+++ b/coder-profile/profile-full-coder.html
@@ -24,12 +24,13 @@
     </div>
 
     </article>
-    <section id="av" class="row justify-content-around">
+    <section id="av" class="row justify-content-between">
         <h3>Availability: Available</h3>
-        <button>Edit</button>
+        <button class="btn btn-secondary">Edit my profile</button>
     </section>
     <section id="ref" class="row justify-content-around">
-        <a href="#">About</a>
+        <p>100% response rate</p>
+        <p>Last login 3h ago</p>
         <a href="#tes">References 3</a>
         <!--a href="#">Contacts 5</a-->
         <p>Member since 2019</p>
@@ -51,6 +52,13 @@
             <p>I really need to test my codes on the machines in their working environment (aka outer space). If you can't bring me there, there's little use hiring me.</p>
     </section>
 
+    <section id="soc">
+        <p>Other social media:</p>
+        <a ref="https://github.com/CSteigueber"><img src="pics/GitHub-Mark.png"  class="w-100" alt="github logo"></a>
+        <a ref="https://www.linkedin.com/feed/"><img src="pics/linkedin.jpeg"  class="w-100" alt="linkedin logo"></a>
+        <a ref="https://www.facebook.com/index.php"><img src="pics/Facebook-logo.png" class="w-100" alt="Facebook-logo"></a>
+    </section>
+    
     <section id="tes" class="container">
         <h3 style="align-content: center;">Testimonies</h3>
         <section class="row justify-content-around">
