--- a/coder_form.html
+++ b/coder_form.html
@@ -7,7 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!--My CSS-->
     <link rel="stylesheet" href="/css/styles.css">
+    <!--Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+
+
 
     <title>Find-a-coder/work/quiz!</title>
   </head>
@@ -66,9 +71,11 @@
             <div class="form-group w-50">
                 <label>Address</label>
                 
-                    <input type="text" class="form-control mb-4" placeholder="Street">
-                    <input type="text" class="form-control w-25" placeholder="House Number">
-                    <input type="text" class="form-control mt-4 w-25" placeholder="Postal Code">
+                    <input type="text" class="form-control mb-2" placeholder="Street">
+                    <label for="house-number">House Number</label>
+                    <input type="text" class="form-control w-25 house-number" placeholder="">
+                    <label class="mt-1" for="postal-code">Postal Code</label>
+                    <input type="text" class="form-control w-25 postal-code" placeholder="eg.1234">
                     <input type="text" class="form-control my-4" placeholder="City">
                     <input type="text" class="form-control my-4" placeholder="Country">
             </div>
