final edits for today

--- a/coder_form.html
+++ b/coder_form.html
@@ -288,7 +288,7 @@
         <div class="form-group w-75">
             <label>What do you expect from your future employer?</label>
             
-            <textarea class="form-control" id="" cols="30" rows="10" placeholder=""></textarea>
+            <textarea class="form-control" id="" cols="30" rows="10" placeholder="Think out of the box!"></textarea>
         </div>
     </div>
 
