--- a/profile-full-coder.html
+++ b/profile-full-coder.html
@@ -40,7 +40,7 @@
         <h3>Education</h3>
             <p>I graduated at BeCode university</p>        
         <h3>Experience</h3>
-            <p>I hold tremendous experience with all kind of programming languages. Coding robots used in space exploration is one of my specialties.</p>
+            <p>I hold tremendous experience with all kind of programming languages. Coding robots for use in space exploration is one of my specialties.</p>
             <p>My list of former employers includes (but is not limited to): Boston Dynamics, NASA, Google, Microsoft, Luigi's Pizza Palace and facebook.</p>
         <h3>Interests</h3>
             <ul>
@@ -53,10 +53,10 @@
     </section>
 
     <section id="soc">
-        <p>Other social media:</p>
-        <a href="https://github.com/CSteigueber"><img src="pics/GitHub-Mark.png"  class="w-100" alt="github logo"></a>
-        <a href="https://www.linkedin.com/in/claas-steig%C3%BCber-812001173/"><img src="pics/linkedin.jpeg"  class="w-100" alt="linkedin logo"></a>
-        <a href="https://www.facebook.com/profile.php?id=1513983871"><img src="pics/Facebook-logo.png" class="w-100" alt="Facebook-logo"></a>
+        <p class="text-center">Other social media:</p>
+        <a  href="https://github.com/CSteigueber"><img src="pics/github.jpeg"  class="w-100 rounded-circle" alt="github logo"></a>
+        <a  href="https://www.linkedin.com/in/claas-steig%C3%BCber-812001173/"><img src="pics/linkedin.jpeg"  class="w-100 rounded-circle" alt="linkedin logo"></a>
+        <a  href="https://www.facebook.com/profile.php?id=1513983871"><img src="pics/fb.jpeg" class="w-100 rounded-circle" alt="Facebook-logo"></a>
     </section>
     
     <section id="tes" class="container">
