edit bgcolour both forms and  font-weight

--- a/about_us.html
+++ b/about_us.html
@@ -15,10 +15,10 @@
     <title>About Us</title>
   </head>
   <body>
-    <div class="jumbotron text-center bg-light">
-        <h1>Find-a-dev was created <u>by developers, for developers</u></h1>
+    <div class="jumbotron text-center text-white bg-dark">
+        <h1>Find-a-dev was created <em>by developers, for developers</em></h1>
         <p class="lead mt-3">We are developers, passionate about expanding our network of the top talent in developers in the world.</p>
-        <p class="lead">So far we've connected over 9,076 employers and developers globally from over 147 countries.</p>
+        <p class="lead">So far we've connected over 49,076 employers and developers globally from over 147 countries.</p>
     </div>
 
     <!-- Optional JavaScript -->
