--- a/company_form.html
+++ b/company_form.html
@@ -234,7 +234,7 @@
     <div class="form-group w-75">
       <label class="head-label">Tell us why someone would want to work for your company <small>(Optional)</small></label>
       <textarea class="form-control" id="" cols="30" rows="10" placeholder="Be creative!"></textarea>
-    </div>
+    </div>.
   
   <!--Submit button-->
   
