added twitter link no responsiveness included yet

--- a/coder-profile/profile-full-coder.html
+++ b/coder-profile/profile-full-coder.html
@@ -8,7 +8,7 @@
     <title>User Profile</title>
 </head>
 <body class="bg-info">
-<article class="grid-container">
+<article class="prog-container">
     <article id="car" class="card bg-warning">
     <img src="pics/me.jpg" class="card-img-top rounded-circle" alt="profile_pic">
     <div class="card-body">
@@ -20,6 +20,13 @@
             <li>JS - Level: Expert</li>
             <li>PHP - Level: Expert</li>
             <li>Python - Level: Expert</li>
+        </ul>
+        <p class="card-text">Languages:</p>
+        <ul class="card-text">
+            <li>German - Level: fluent</li>
+            <li>English - Level: fluent</li>
+            <li>Dutch - Level: fluent</li>
+            <li>Suaheli - Level: fluent</li>
         </ul>
     </div>
 
@@ -40,7 +47,7 @@
         <h3>Education</h3>
             <p>I graduated at BeCode university</p>        
         <h3>Experience</h3>
-            <p>I hold tremendous experience with all kind of programming languages. Coding robots used in space exploration is one of my specialties.</p>
+            <p>I hold tremendous experience with all kind of programming languages. Coding robots for use in space exploration is one of my specialties.</p>
             <p>My list of former employers includes (but is not limited to): Boston Dynamics, NASA, Google, Microsoft, Luigi's Pizza Palace and facebook.</p>
         <h3>Interests</h3>
             <ul>
@@ -53,14 +60,15 @@
     </section>
 
     <section id="soc">
-        <p>Other social media:</p>
-        <a ref="https://github.com/CSteigueber"><img src="pics/GitHub-Mark.png"  class="w-100" alt="github logo"></a>
-        <a ref="https://www.linkedin.com/feed/"><img src="pics/linkedin.jpeg"  class="w-100" alt="linkedin logo"></a>
-        <a ref="https://www.facebook.com/index.php"><img src="pics/Facebook-logo.png" class="w-100" alt="Facebook-logo"></a>
+        <p class="text-center">Other social media:</p>
+        <a  href="https://github.com/CSteigueber"><img src="pics/github.jpeg"  class="w-100 rounded-circle" alt="github logo"></a>
+        <a  href="https://www.linkedin.com/in/claas-steig%C3%BCber-812001173/"><img src="pics/linkedin.jpeg"  class="w-100 rounded-circle" alt="linkedin logo"></a>
+        <a  href="https://www.facebook.com/profile.php?id=1513983871"><img src="pics/fb.jpeg" class="w-100 rounded-circle" alt="Facebook-logo"></a>
+        <a href="https://twitter.com/"><img src="pics/twitter.jpg" class="w-100 rounded-circle "alt="twitter-logo"></a>
     </section>
     
     <section id="tes" class="container">
-        <h3 style="align-content: center;">Testimonies</h3>
+        <h3 style="align-content: center;">References</h3>
         <section class="row justify-content-around">
             <p>from companies</p>
             <p>from colleages</p>
